--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 
         document.querySelectorAll('.top-button').forEach(button => {
             button.addEventListener('click', () => {
+                if (document.getElementById('start-button').disabled) return;
                 document.querySelectorAll('.top-button').forEach(btn => btn.classList.remove('active'));
                 button.classList.add('active');
                 const enemyIndex = button.getAttribute('data-enemy');
@@ -151,6 +152,7 @@
         document.getElementById('start-button').addEventListener('click', () => {
             const startButton = document.getElementById('start-button');
             startButton.disabled = true;
+            document.querySelectorAll('.top-button').forEach(button => button.disabled = true);
             startButton.classList.add('disabled');
             const maxHp = 50000;
             let hpYou = maxHp;
@@ -220,6 +222,7 @@
                 if (hpYou <= 0 || hpOpponent <= 0) {
                     clearInterval(intervalId);
                     startButton.disabled = false;
+                    document.querySelectorAll('.top-button').forEach(button => button.disabled = false);
                     startButton.classList.remove('disabled');
                     if (hpOpponent <= 0) {
                         document.getElementById('imageEnemy').src = enemy.image2;
